2023 Day 24 - generified sympy solver in case I ever want to do this cursed thing in the future